--- a/Debug/makefile
+++ b/Debug/makefile
@@ -10,6 +10,7 @@ RM := rm -rf
 -include sources.mk
 -include startup/subdir.mk
 -include src/subdir.mk
+-include inc/subdir.mk
 -include StdPeriph_Driver/src/subdir.mk
 -include subdir.mk
 -include objects.mk
